Bug 133209 - shift selection is not working in download screen
Summary: shift selection is not working in download screen
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Import-IconView (other bugs)
Version First Reported In: 0.9.0
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-08-29 21:25 UTC by Benoit DUMONT
Modified: 2017-08-17 17:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0
Sentry Crash Report:


Attachments
Selection made by ctrl key - everything is correct (238.49 KB, image/png)
2006-08-29 21:26 UTC, Benoit DUMONT
Details
Selection made by shift key - the names of the files are missing (231.89 KB, image/png)
2006-08-29 21:27 UTC, Benoit DUMONT
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Benoit DUMONT 2006-08-29 21:25:42 UTC
Version:           0.9.0-svn (using KDE KDE 3.5.4)
Installed from:    Mandriva RPMs
Compiler:          Target: i586-mandriva-linux-gnu
OS:                Linux (i686) release 2.6.12-12mdksmp

When I select a set of pictures in the download screen, everything is working correctly.
When I select a set of picture using the shift key, it seems that the behavior is different. The name of the file is not displayed under the picture like it should be and when I download, the original name of the file is kept.
Comment 1 Benoit DUMONT 2006-08-29 21:26:49 UTC
Created attachment 17559 [details]
Selection made by ctrl key - everything is correct
Comment 2 Benoit DUMONT 2006-08-29 21:27:53 UTC
Created attachment 17560 [details]
Selection made by shift key - the names of the files are missing
Comment 3 caulier.gilles 2006-08-29 21:30:53 UTC
Benoit, unforget to choose the right component. It's more easy to manage B.K.O files like this...
 
Thanks in advance for your report.

Gilles
Comment 4 Marcel Wiesweg 2006-08-30 19:37:15 UTC
SVN commit 578964 by mwiesweg:

Properly emit signalSelectionChanged when selecting with Shift

BUG: 133209


 M  +4 -2      iconview.cpp  


--- trunk/extragear/graphics/digikam/digikam/iconview.cpp #578963:578964
@@ -926,11 +926,11 @@
         else if (e->state() & Qt::ShiftButton)
         {
             blockSignals(true);
-            
+
             if (d->currItem)
             {
                 clearSelection();
-                
+
                 // select all items from/upto the current item
                 bool bwdSelect = false;
 
@@ -969,6 +969,8 @@
             }
 
             blockSignals(false);
+
+            emit signalSelectionChanged();
         }
         else
         {