Properly emit signalSelectionChanged when selecting with Shift

BUG: 133209

svn path=/trunk/extragear/graphics/digikam/; revision=578964